--- a/estilo/style1.css
+++ b/estilo/style1.css
@@ -1,40 +1,72 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+    --rojo: #E30823;
+    --negro:#000;
+}
 .fondo{
-    background-image: url(/img/bg-inicio.jpg);
+    background-image: url(/img/bg-start.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+.fondo::before{
+    z-index: 1;
+    content: '';
+    width: 100%;
+    min-height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background: linear-gradient(var(--rojo) , var(--negro) 50%);
+    opacity: 0.6;
+}
 .box{
     height: 33.33vh;
 }
-.logo{
-    width: 100%;
-    background-color: black;
-    height: 150px;
-    border-radius: 50%;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.logo h1{
-    color: white;
+.logo img{
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    border-radius: 100%;
+    border: solid 5px rgb(235, 4, 50);
 }
 .text{
-    text-align: center;
+    position: relative;
+    z-index: 2;
+    width: 90%;
     color: white;
+    font-size: 20px;
+    font-family: 'raleway', sans-serif;
 }
 .boton{
-    width: 100%;
-
     display: flex;
     justify-content: center;
-    margin-top: -50px;
+    margin-top: -60px;
+}
+.boton button{
+    position: relative;
+    z-index: 2;
+    background-color: #E30823;
+    border-radius: 50px;
+    width: 100%;
+    font-size: 32px;
+    font-family:  'raleway', sans-serif ;
 }
 .span h5{
+    position: relative;
+    z-index: 2;
+    color: white;
     font-size: 16px;
+    font-family:  'raleway', sans-serif ;
 
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
+    padding-top: 20px;
 }
