--- a/estilo/style1.css
+++ b/estilo/style1.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'raleway', sans-serif;
 }
 :root{
     --rojo: #E30823;
@@ -42,31 +43,32 @@
     width: 90%;
     color: white;
     font-size: 20px;
-    font-family: 'raleway', sans-serif;
 }
-.boton{
-    display: flex;
-    justify-content: center;
-    margin-top: -60px;
-}
-.boton button{
+.submit-btn{
+    text-align: center;
     position: relative;
     z-index: 2;
-    background-color: #E30823;
-    border-radius: 50px;
-    width: 100%;
-    font-size: 32px;
-    font-family:  'raleway', sans-serif ;
+    width: 90%;
+    border-radius: 30px;
+    padding: 10px 30px;
+    background-color:var(--rojo);
+    color: #D9D9D9;
+    font-size: 24px;
+    text-decoration: none;
+    font-weight: 600;
+    display: block;
+    border: none;
+    outline: none;
+    margin: auto;
 }
 .span h5{
     position: relative;
     z-index: 2;
     color: white;
     font-size: 16px;
-    font-family:  'raleway', sans-serif ;
 
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
-    padding-top: 20px;
+    padding-top: 10px;
 }
