--- a/estilo/style2.css
+++ b/estilo/style2.css
@@ -18,7 +18,7 @@
 }
 .form-box{
     position: relative;
-    width: 330px;
+    width: 100%;
     height: 470px;
     background-color: #F4F3F3;
     border-radius: 40px;
