--- a/estilo/style2.css
+++ b/estilo/style2.css
@@ -8,6 +8,31 @@
     --rojo: #E30823;
     --negro:#000;
 }
+.caja{
+    position: absolute;
+    background-image: url(../img/bg-login.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    top: 0;
+    left: 0;
+    height: 55vh;
+    width: 100%;
+    border-radius: 0 0 50px 50px;
+}
+.caja::before{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 55vh;
+    border-radius: 0 0 50px 50px;
+
+    background: linear-gradient(var(--rojo) , var(--negro) 50%);
+    opacity: 0.6;
+
+}
 .logo img{
     margin-top: -55px;
     position: relative;
@@ -24,6 +49,7 @@
     border-radius: 40px;
     padding: 20px;
     overflow: hidden;
+    box-shadow: 7px 7px 16px -11px rgba(0,0,0,0.56);
 }
 .button-box{
     display: flex;
